selfhost/test/typechecker/unary/error_minus.1.out
Error at %FILE_NAME%:1:2
Type mismatch
  |  -"hello"
      ^
Expected one of: Int, Float
but instead found: String
